test/bad/def_not_pred.pa
def foo for a b {
    false <-> a = b
}
